; ModuleID = '/home/carl/AnghaBench/tg/extr_interface.c_print_msg_success_gw.c'
source_filename = "/home/carl/AnghaBench/tg/extr_interface.c_print_msg_success_gw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tgl_state = type { i32 }
%struct.tgl_message = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_msg_success_gw(%struct.tgl_state* %0, i8* %1, i32 %2, %struct.tgl_message* %3) #0 {
  %5 = alloca %struct.tgl_state*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.tgl_message*, align 8
  store %struct.tgl_state* %0, %struct.tgl_state** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.tgl_message* %3, %struct.tgl_message** %8, align 8
  %9 = call i32 (...) @write_secret_chat_file()
  %10 = load %struct.tgl_state*, %struct.tgl_state** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @print_success_gw(%struct.tgl_state* %10, i8* %11, i32 %12)
  ret void
}

declare dso_local i32 @write_secret_chat_file(...) #1

declare dso_local i32 @print_success_gw(%struct.tgl_state*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
